Added folder with icons

--- a/контакты.html
+++ b/контакты.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css" type="text/css" media="screen, projection">
-
-    <title>Обо мне</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css" integrity="sha384-7ynz3n3tAGNUYFZD3cWe5PDcE36xj85vyFkawcF6tIwxvIecqKvfwLiaFdizhPpN" crossorigin="anonymous">
+    <title>Контакты</title>
   </head>
   <body>
       <nav class="navigation">
@@ -18,7 +18,12 @@
       </nav>
   </body>
   <footer class="signature">
-      <p>email: diana.sibagatullina96@gmai.com</p>
+      <ul>
+          <li><i class="fa-brands fa-telegram"></i></li>
+          <li><i class="fa-brands fa-whatsapp"></i></li>
+          <li><i class="fa-brands fa-github"></i></li>
+      </ul>  
+    <p>email: diana.sibagatullina96@gmai.com</p>
       <p>Telegram: @Diana_s96</p>
   </footer>
 </html>
