--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       </nav>
   </body>
   <footer class="signature">
-      <p>email: diana.sibagatullina96@gmai.com</p>
-      <p>Telegram: @Diana_s96</p>
+    <a class="button_social-media" target="_blank" href="https://github.com/DianaS96">
+        <img src="icons/github.png">
+        <p>email: diana.sibagatullina96@gmai.com</p>
+        <p>Telegram: @Diana_s96</p>
   </footer>
 </html>
