check whether icons are visible 2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </body>
   <footer class="signature">
     <a class="button_social-media" target="_blank" href="https://github.com/DianaS96">
-        <img src="icons/github.png">
+        <img src="icons/github.png" width="50" height="50">
         <p>email: diana.sibagatullina96@gmai.com</p>
         <p>Telegram: @Diana_s96</p>
   </footer>
