Added background photo on main page

--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
 <!doctype html>
 <html lang="ru">
-  <head>
+    <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css" type="text/css" media="screen, projection">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="styles.css" type="text/css" media="screen, projection">
 
-    <title>Обо мне</title>
-  </head>
-  <body>
-      <nav class="navigation">
-          <ul class="navig">
-              <li class="navig1"><a href="https://dianas96.github.io/index.html">Обо мне</a></li>
-              <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Карьера</a></li>
-              <li class="navig1"><a href="https://dianas96.github.io/контакты.html">Контакты</a></li>
-          </ul>
-      </nav>
-  </body>
-  <footer class="signature">
-    <a class="button_social-media" target="_blank" href="https://github.com/DianaS96">
-        <img src="icons/github.png" width="50" height="50">
-        <p>email: diana.sibagatullina96@gmai.com</p>
-        <p>Telegram: @Diana_s96</p>
-  </footer>
+        <title>Обо мне</title>
+    </head>
+    <body>
+        <nav class="navigation">
+            <ul class="navig">
+                <li class="navig1"><a href="https://dianas96.github.io/index.html">Обо мне</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Карьера</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/контакты.html">Контакты</a></li>
+            </ul>
+        </nav>
+
+        <div class="content">
+            <p>ОМГ</p>
+        </div>
+
+    </body>
+    <footer class="signature">
+        <ul class="contacts">
+            <li class="contacts1"><a class="button_social-media" target="_blank" href="https://github.com/DianaS96">
+                <img src="icons/github.png" alt="Гитхаб" width="30" height="30"></a>
+            </li>
+
+            <li class="contacts1"><a class="button_social-media" target="_blank" href="https://t.me/Diana_s96">
+                <img src="icons/telegram.png" alt="Телега" width="30" height="30"></a>
+            </li>
+
+            <li class="contacts1"><a class="button_social-media" target="_blank" href="https://wa.me/79052197589">
+                <img src="icons/whatsup.png" alt="Ватсапп" width="30" height="30"></a>
+            </li>
+
+            <li class="contacts1"><a class="button_social-media" target="_blank" href="mailto:diana.sibagatullina96@gmail.com">
+                <img src="icons/gmail.png" alt="Мыло" width="30" height="30"></a>
+            </li>
+
+        </ul>
+    </footer>
 </html>
