Changed background size

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
             </ul>
         </nav>
 
-        <div class="content">
-            <p>ОМГ</p>
+        <div data-theme="dark" class="content">
+            <svg class="background_photo_main" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2900 1350" style="background-image:url('photos/programming4.jpg');"></svg>
+            
         </div>
 
     </body>
     <footer class="signature">
         <ul class="contacts">
             <li class="contacts1"><a class="button_social-media" target="_blank" href="https://github.com/DianaS96">
-                <img src="icons/github.png" alt="Гитхаб" width="30" height="30"></a>
+                <img src="https://github.com/fluidicon.png" alt="Гитхаб" width="30" height="30"></a>
             </li>
 
             <li class="contacts1"><a class="button_social-media" target="_blank" href="https://t.me/Diana_s96">
