--- a/контакты.html
+++ b/контакты.html
@@ -19,9 +19,9 @@
   </body>
   <footer class="signature">
       <ul>
-          <li><i class="fa-brands fa-telegram"></i></li>
-          <li><i class="fa-brands fa-whatsapp"></i></li>
-          <li><i class="fa-brands fa-github"></i></li>
+          <a class="button_social-media" target="_blank" href="https://github.com/DianaS96">
+            <img src="icons/github.png">
+          </a>
       </ul>  
     <p>email: diana.sibagatullina96@gmai.com</p>
       <p>Telegram: @Diana_s96</p>
