added description (work&study)

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="styles.css" type="text/css" media="screen, projection">
 
-        <title>Обо мне</title>
+        <title>Привет!</title>
     </head>
     <body>
         <nav class="navigation">
             <ul class="navig">
-                <li class="navig1"><a href="https://dianas96.github.io/index.html">Обо мне</a></li>
-                <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Карьера</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/index.html">Начало</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Обо мне</a></li>
                 <li class="navig1"><a href="https://dianas96.github.io/контакты.html">Контакты</a></li>
             </ul>
         </nav>
