changes to bakcground image position, additional info in About me section

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
     <body>
         <nav class="navigation">
             <ul class="navig">
-                <li class="navig1"><a href="https://dianas96.github.io/index.html">Начало</a></li>
-                <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Обо мне</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/index.html">Обо мне</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Резюме</a></li>
                 <li class="navig1"><a href="https://dianas96.github.io/контакты.html">Контакты</a></li>
             </ul>
         </nav>
 
         <div data-theme="dark" class="content">
-            <svg class="background_photo_main" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2900 1350" style="background-image:url('photos/programming4.jpg');"></svg>
-            
+            <div class="site-header">
+                <h1>Привет!</h1>
+                <p>Меня зовут Диана, а это мой личный сайт-резюме.</p>
+                <p>Немного обо мне:</p>
+                <p>Долгое время я работала в сфере финансов и аудита. </p>
+            </div>
         </div>
-
     </body>
+
     <footer class="signature">
         <ul class="contacts">
             <li class="contacts1"><a class="button_social-media" target="_blank" href="https://github.com/DianaS96">
