--- a/карьера.html
+++ b/карьера.html
@@ -12,11 +12,17 @@
     <body>
         <nav class="navigation">
             <ul class="navig">
-                <li class="navig1"><a href="https://dianas96.github.io/index.html">Начало</a></li>
-                <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Обо мне</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/index.html">Обо мне</a></li>
+                <li class="navig1"><a href="https://dianas96.github.io/карьера.html">Резюме</a></li>
                 <li class="navig1"><a href="https://dianas96.github.io/контакты.html">Контакты</a></li>
             </ul>
         </nav>
+
+        <div class="title-resume">
+            <div class="resume_tmp">
+                <div class="resume">Резюме</div>
+            </div>
+        </div>
 
         <div data-theme="dark" class="timeline">
             <div class="timeline-body">
