Added links to navbar

--- a/карьера.html
+++ b/карьера.html
@@ -28,7 +28,7 @@
   <body>
       
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Главная</a>
+        <a class="navbar-brand" href="https://dianas96.github.io/index.html">Главная</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,11 +36,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto main-menu">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Резюме <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://dianas96.github.io/карьера.html">Резюме <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Контакты</a>
+              <a class="nav-link" href="https://dianas96.github.io/контакты.html">Контакты</a>
             </li>
+
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
