Added links to CV (pdf)

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             Но, понимая ограничения использования Alteryx, я начала изучать языки программирования.
             Сначала наткнулась на курс Гарвардского унивирситета CS50. 
             После прохождения данного курса интерес к программированию только возрос. 
-            Поиски курсов по ЯП в интернети привели меня на сайт Школы 21. 
+            Поиски курсов по ЯП в интернете привели меня на сайт Школы 21. 
         </p>
         <p>
             И в июле 2021 г. я прошла бассейн Школы 21.
@@ -75,8 +75,21 @@
         <p>
             С 4 ноября 2021 г. я являюсь студентом школы 21.
         </p>
+
+        <p>
+            <a href="https://drive.google.com/file/d/13AM0AE_C1M2NOEbIr2YJiApGSYkU-xVC/view?usp=sharing" class="btn btn-light btn-learn btn-add-space">
+            СКАЧАТЬ РЕЗЮМЕ НА РУССКОМ
+            <i class="fas fa-download"></i>
+            <a href="https://drive.google.com/file/d/1wFDcz5f05WdOHxr-optqoJZOrOGwKNd8/view?usp=sharing" class="btn btn-light btn-learn">
+                DOWNLOAD CV (ENGLISH)
+                <i class="fas fa-download"></i>
+            </a>
+    
+        </a>
+        </p>
+
         <p class="lead">
-          <a class="btn btn-info btn-lg" href="#" role="button">Мое резюме</a>
+          <a class="btn btn-info btn-lg" href="https://dianas96.github.io/карьера.html" role="button">Мое резюме</a>
         </p>
       </div>
       
