--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <title>Diana Sibagatullina | CV</title>
   </head>
   <body>
-    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+    <nav id="navbar-example2" class="navbar fixed-top navbar-light bg-light px-3" position:sticky; top:10px; left:0>
       <a class="navbar-brand" href="#">Диана Сибагатуллина</a>
       <ul class="nav nav-pills">
         <li class="nav-item">
@@ -39,12 +39,12 @@
     </nav>
     
     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-      <div class="container">
-        <div class="text-center">
-          <h1 id="scrollspyHeading1">Обо мне</h1>
-        </div>
-        
+      <div class="container">        
         <div class="jumbotron">
+          <div class="text-center">
+            <h1 id="scrollspyHeading1">Обо мне</h1>
+          </div>
+  
           <div class="row">
             <div class="col-9">
                 <h1 class="display-4">Привет! &#128540</h1>
