English version added

--- a/index_en.html
+++ b/index_en.html
@@ -27,19 +27,18 @@
   </head>
   <body>
     <nav id="navbar-example2" class="navbar fixed-top navbar-light bg-light px-3" position:sticky; top:10px; left:0>
-      <a class="navbar-brand" href="#">Диана Сибагатуллина</a>
+      <a class="navbar-brand" href="#">Diana Sibagatullina</a>
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link" href="#scrollspyHeading1">Обо мне</a>
+          <a class="nav-link" href="#scrollspyHeading1">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#scrollspyHeading2">Резюме</a>
+          <a class="nav-link" href="#scrollspyHeading2">CV</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/index_en.html">
-            <img src="https://cdn.jsdelivr.net/npm/openmoji@12.4.0/color/svg/1F1FA-1F1F8.svg" style="display: inline; width: 30px;">
+          <a class="nav-link" href="/index.html">
+            <img src="https://cdn.jsdelivr.net/npm/openmoji@12.4.0/color/svg/1F1F7-1F1FA.svg" style="display: inline; width: 30px;">
           </a>
-        </li>
       </ul>
     </nav>
     
@@ -47,13 +46,13 @@
       <div class="container">        
         <div class="jumbotron">
           <div class="text-center">
-            <h1 id="scrollspyHeading1">Обо мне</h1>
+            <h1 id="scrollspyHeading1">About me</h1>
           </div>
   
           <div class="row">
             <div class="col-sm-5 col-md-8">
-                <h1 class="display-4">Привет! &#128540</h1>
-                <p class="lead">Меня зовут Диана, мне 25 и я из Питера. А это мой личный сайт-резюме </p>
+                <h1 class="display-4">Hi! &#128540</h1>
+                <p class="lead">My name is Diana, I'm 25 and I'm from St. Petersburg. This is my personal website-portfolio. </p>
             </div>
             <div class="col-sm-3 offset-sm-2 col-md-4 offset-md-0">
               <img class="photo_me1 img-responsive" src="photos/main_photo2.jpg" alt="Photo of me">
@@ -61,27 +60,27 @@
           </div>
 
           <hr class="my-4">
-          <p>Долгое время я работала в сфере финансов и аудита &#128200. 
-              В своей работе я часто сталкивалась с необходимостью обрабатывать большие объемы финансовой информации. 
-              Данных было так много, что Excel не справлялся. 
-              Тогда я и заинтересовалась программированием &#128187.</p>
-          <p>Поначалу я оптимизировала работу с данными с помощью Alteryx. 
-              Но, понимая ограничения использования Alteryx, я начала изучать языки программирования.
-              Сначала наткнулась на курс Гарвардского унивирситета CS50. 
-              После прохождения данного курса интерес к программированию только возрос. 
-              Поиски курсов по ЯП в интернете привели меня на сайт Школы 21. 
+          <p>For 5 years I worked in the field of finance&audit &#128200. 
+            At my old job I usually needed to process large amount of financial data.
+            There was so much info in datasets that Excel couldn't handle it and crashed.
+            I looked for ways to optimize my job, so I become interested in programming &#128187.</p>
+          <p>I automated the tedious parts of my job using Alteryx. 
+              However, I realized limited usage of Alteryx in data analysis, and thus I started learning programming languages.
+              At first, I accidentally stumbled upon Harvard University's CS50 course.
+              After completing this course, interest in programming increased.
+              Interner surfing led ne to the School 21 website.
           </p>
           <p>
-              И в июле 2021 г. я прошла бассейн Школы 21.
-              Спустя 2 месяца после бассейна я узнала, что меня приняли! 
+              In July 2021 I attended a trial month of coding at School 21 (piscine).
+              2 months after the piscine I found out that I was accepted!
           </p>
           <p>
-              С 4 октября 2021 г. я являюсь студентом школы 21.
+              Since October 4, 2021 I'am a student od School 21.
           </p>
 
           <p>
             <a href="https://drive.google.com/file/d/13AM0AE_C1M2NOEbIr2YJiApGSYkU-xVC/view?usp=sharing" class="btn btn-light btn-learn btn-add-space">
-              СКАЧАТЬ РЕЗЮМЕ НА РУССКОМ
+              DOWNLOAD CV (RUSSIAN)
               <i class="fas fa-download"></i>
             </a>
 
@@ -96,7 +95,7 @@
 
     <section class="gray-section">
       <div class="text-center">
-        <h1 id="scrollspyHeading2">Резюме</h1>
+        <h1 id="scrollspyHeading2">CV</h1>
       </div>
 
       <div class="container">
@@ -109,12 +108,12 @@
                     <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Обучение в <a href="https://21-school.ru/">школе 21</a></h4>
-                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(с октября 2021 по настоящее время)</small></p>
+                            <h4 class="timeline-title"><a href="https://21-school.ru/">Programming School 21</a></h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(since Oct 2021)</small></p>
                         </div>
                         <div class="timeline-body">
                             <p>
-                              Смотри мои проекты, выполненные в рамках обучения в школе, по <a href="https://github.com/DianaS96">ССЫЛКЕ.</a>
+                              Please, see my projects on <a href="https://github.com/DianaS96">Github.</a>
                             </p>
                         </div>
                     </div>
@@ -123,8 +122,8 @@
                     <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Бассейн <a href="https://21-school.ru/">школы 21</a></h4>
-                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(июль 2021)</small></p>
+                            <h4 class="timeline-title"><a href="https://21-school.ru/">School 21 piscine</a></h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Jul 2021)</small></p>
                         </div>
                     </div>
                 </li>
@@ -132,18 +131,23 @@
                     <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Старший консультант <a href="https://www.pwc.ru/">PwC</a></h4>
-                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(август 2017 - март 2021)</small></p>
+                            <h4 class="timeline-title">Senior consultant <a href="https://www.pwc.ru/">PwC</a></h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Aug 2017 - Mar 2021)</small></p>
                         </div>
                         <div class="timeline-body">
                           <ul>
-                            <li class="list-description">Руководила командой из 2-3 человек (стажеры и консультанты).</li>
-                            <li class="list-description">В 2020 - 2021 гг. внедрила Alteryx на всех своих проектах. В результате на одном из проектов количество затрачиваемого на рутинные расчеты времени снизилось на 100 часов.</li>
-                            <li class="list-description">Оценивала эффект влияния новых стандартов (IFRS 16 «Leases», IFRS 9 «Financial Instruments» и IFRS 15 «Revenue from Contracts with Customers») и предлагала соответствующие корректировки Клиенту.</li>
-                            <li class="list-description">В ноябре 2020 г. провела 2 онлайн-тренинга по Alteryx.</li>
-                            <li class="list-description">В 2020 - 2021 г. в качестве оператора чат-бота создала несколько баз данных с типичными аудиторскими вопросами и ответами на них, анализировала ответы чат-бота и корректировала базы вопросов. В результате в PwC был упрощен поиск сотрудниками информации.</li>
-                            <li class="list-description">По результатам каждого года работы получала Spot-bonus/Appreciation award.</li>
-                            <li class="list-description">Получила наивысший балл среди сотрудников PwC по экзаменам ACCA F9 (дек.2018) и P2 (сент.2019).</li>
+                            <li class="list-description">Managed team of 2-3 employees (interns and consultants).</li>
+                            <li class="list-description">In 2020 – 2021 FY implemented Alteryx on all of my projects. As a result, on one of my projects the 
+                              amount of time spent on routine calculations decreased by ~100 hours.</li>
+                            <li class="list-description">Assessed impact of implementation of new IFRS Standards 
+                              (IFRS 16 «Leases», IFRS 9 «Financial Instruments» and IFRS 15 «Revenue from Contracts with Customers»)
+                              on financial statements of Clients.</li>
+                            <li class="list-description">Conducted 2 online trainings on Alteryx in November 2020.</li>
+                            <li class="list-description">In 2020-2021 as a chatbot operator created several databases with typical audit questions, 
+                              analyzed chat-bot’s answers and adjusted databases. 
+                              As a result, chatbot made it easier for employees to find information.</li>
+                            <li class="list-description">Received Spot-bonus/Appreciation award bonus award for high quality work (April 2018, May 2019, June 2020)</li>
+                            <li class="list-description">Achieved the highest score on ACCA F9 (Dec 2018) and P2 (Sept 2019) exams among PwC ACCA students.</li>
                           </ul>
                         </div>
                     </div>
@@ -152,16 +156,16 @@
                   <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Бакалавр экономики, <a href="https://spbu.ru/">СПБГУ</a></h4>
+                            <h4 class="timeline-title">Bachelor of Economics, <a href="https://spbu.ru/">Saint-Petersburg State University</a></h4>
                             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(2013 - 2017)</small></p>
                         </div>
                         <div class="timeline-body">
-                          <p>Внеучебная деятельность и достижения:</p>
+                          <p>Extracurricular activities:</p>
                           <ul>
-                            <li class="list-description">Летняя школа EY (было выбрано 30 участников из 200+ кандидатов), Июнь 2016 – Август 2016</li>
-                            <li class="list-description">KPMG Foundation for Graduates Online, Март 2016 – Июнь 2016</li>
-                            <li class="list-description">Changellenge Cup SPb – Финалист (топ-10 из 287 команд), Зима 2015</li>
-                            <li class="list-description">«В стиле аудит» – Финалист (топ-15 из 268 команд), Осень 2015</li>
+                            <li class="list-description">EY Summer Business School (top 30 out of over 200 applicants), Jun 2016 – Aug 2016</li>
+                            <li class="list-description">KPMG Foundation for Graduates Online, Mar 2016 – Jun 2016</li>
+                            <li class="list-description">Changellenge Cup SPb – Finalist (top 10 out of 287 teams), Winter 2015</li>
+                            <li class="list-description">«In audit style battle» – Finalist (top 15 out of 268 teams), Fall 2015</li>
                           </ul>
                         </div>
                     </div>
