--- a/index.html
+++ b/index.html
@@ -233,6 +233,30 @@
 								<td>Решение проблемы обедающих философов на С.</td>
 								<td style="text-align: center;">✅100/100</td>
 							</tr>
+							<tr style="height: 2.5rem;">
+								<td><a href="https://github.com/DianaS96/FDF">FDF</a>🌎</td>
+								<td>Отрисовка 3D карты на основе заданных координат.</td>
+								<td style="text-align: center;">✅125/100</td>
+							</tr>
+							<tr style="height: 2.5rem;">
+								<td><a href="https://github.com/DianaS96/Minishell">Minishell</a>🐌</td>
+								<td>Создание аналога bash.<br>
+								Функционал: <br>
+								<ul>
+									<li>обработка одинарных и двойных кавычек</li>
+									<li>обработка редиректов ('<', '<<', '>', '>>') и пайпов ('|')</li>
+									<li>обработка переменных окружения</li>
+									<li>вывод статуса предыдущей команды через 'echo $?'</li>
+									<li>реализация встроенных функций: echo, cd, pwd, export, unset, env, exit</li>
+									<li>обработка сигналов:<br>
+										- Ctrl+C - отображает приглашение с новой строки<br>
+										- Ctrl+D - завершает работу оболочки<br>
+										- Ctrl+\ - сигнал игнорируется<br>
+									</li>
+								</ul>
+								</td>
+								<td style="text-align: center;">В процессе</td>
+							</tr>
 						  </table>
 					</div>
 				</div>
@@ -244,7 +268,77 @@
 					</button>
 				</h2>
 				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-					<div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+					<div class="accordion-body">
+						<ul style="list-style-type:square;">
+							<li>
+								<a href="https://github.com/DianaS96/Health_diet">
+									<h5>Веб-приложение для отслеживания КБЖУ (калории, белки, жиры, углеводы).🥩🥗🍔</h5>
+								</a>
+								<p><h6>Функционал:</h6>
+								- Для использования приложения необходимо зарегистрироваться и войти в аккаунт.<br>
+								- Пользователь имеет доступ к таблице калорийности всех продуктов.<br>
+								- Пользователь может добавлять в дневник информацию о приеме пищи (продукт, прием пищи, кол-во в граммах).<br>
+								- Пользователь может просматривать статистику по КБЖУ и по видам продуктов за определенные дни.
+								</p>
+								<p>
+									<h6>Технологии: </h6>
+									Python3.10 (Flask, sqlite3, pandas, plotly и прочие библиотеки), HTML, CSS, Bootstrap, SQL, Docker.
+								</p>
+							</li>
+
+							<li>
+								<a href="https://github.com/DianaS96/Spb_cars_sales">
+									<h5>Веб-приложение для предсказания стоимости подержаной машины в СПб по состоянию на середину февраля 2022г.🚗🤑</h5>
+								</a>
+								<p><h6>Функционал:</h6>
+									- Пользователю необходимо ввести параметры машины: марка, тип кузова, год выпуска, мощность двигателя (л.с.), привод, коробка передач, гарантия)<br>
+									- После ввода данных пользователь увидит ориентировочную цену.
+								</p>
+								<p>
+									<h6>Технологии: </h6>
+									Python3.10 (Flask, pandas, beautifulsoup, scikit-learn, CatBoost, LightGBM, XGBoost и прочие библиотеки), HTML, CSS, Bootstrap.
+								</p>
+							</li>
+
+							<li>
+								<a href="https://github.com/DianaS96/Covid-19_visualization">
+									<h5>Веб-приложение для вывода статистики по распространению COVID-19 😷</h5>
+								</a>
+								<p><h6>Функционал:</h6>
+									- Пользователю необходимо выбрать страну (либо мир в целом) для вывода статистики<br>
+									- После ввода данных пользователь увидит статистику<br>
+									Статистика по определенным странам: общее и дневное количество заражений и смертей.<br>
+									Миировая статистика:  общее и дневное количество заражений и смертей, Топ-10 стран по кол-ву заражений и смертей, карта распространения COVID-19.<br>
+								</p>
+	
+								<p>
+									<h6>Технологии: </h6>
+									Python3.10 (Flask, pandas, plotly, matplotlib и прочие библиотеки), HTML, CSS, Bootstrap, Docker.
+								</p>
+							</li>
+
+							<li>
+								<a href="https://github.com/DianaS96/Phonebook">
+									<h5>Консольное приложение - телефонный справочник ☎️</h5>
+								</a>
+								<p><h6>Функционал:</h6>
+									- Ввод информации о человеке<br>
+									- Печать информации из справочника<br>
+									- Удаление данных из справочника по определенному id<br>
+									- Сортировка данных по фамилии<br>
+									- Сортировка данных по дню рождения (от старшего к младшему)<br>
+									- Сохранение данных в файл<br>
+									- Считывание данных из файла<br>
+								</p>
+	
+								<p>
+									<h6>Технологии: </h6>
+									C.
+								</p>
+							</li>
+
+						</ul>
+					</div>
 				</div>
 				</div>
 			</div>
