Added info on pet-projects (en)

--- a/index_en.html
+++ b/index_en.html
@@ -77,14 +77,14 @@
 			  However, I realized limited usage of Alteryx in data analysis, and thus I started learning programming languages.
 			  At first, I accidentally stumbled upon Harvard University's CS50 course.
 			  After completing this course, interest in programming increased.
-			  Interner surfing led ne to the School 21 website.
+			  Interner surfing led me to the School 42 website.
 		  </p>
 		  <p>
-			  In July 2021 I attended a trial month of coding at School 21 (piscine).
+			  In July 2021 I attended a trial month of coding at School 42 (piscine).
 			  2 months after the piscine I found out that I was accepted!
 		  </p>
 		  <p>
-			  Since October 4, 2021 I'am a student od School 21.
+			  Since October 4, 2021 I'am a student od School 42.
 		  </p>
 
 		  <p>
@@ -117,7 +117,7 @@
 					<div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<h4 class="timeline-title"><a href="https://21-school.ru/">Programming School 21</a></h4>
+							<h4 class="timeline-title"><a href="https://21-school.ru/">Programming School 42</a></h4>
 							<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(since Oct 2021)</small></p>
 						</div>
 						<div class="timeline-body">
@@ -131,7 +131,7 @@
 					<div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<h4 class="timeline-title"><a href="https://21-school.ru/">School 21 piscine</a></h4>
+							<h4 class="timeline-title"><a href="https://21-school.ru/">School 42 piscine</a></h4>
 							<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Jul 2021)</small></p>
 						</div>
 					</div>
@@ -267,7 +267,7 @@
 				<div class="accordion-item">
 				<h2 class="accordion-header" id="flush-headingTwo">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-					Pet проекты
+					Pet projects
 					</button>
 				</h2>
 				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
@@ -275,17 +275,17 @@
 						<ul style="list-style-type:square;">
 							<li>
 								<a href="https://github.com/DianaS96/Health_diet">
-									<h5>Веб-приложение для отслеживания КБЖУ (калории, белки, жиры, углеводы).🥩🥗🍔</h5>
+									<h5>Simple calorie and PFC (proteins, fats, carbohydrates) tracking web application.🥩🥗🍔</h5>
 								</a>
-								<p><h6>Функционал:</h6>
-								- Для использования приложения необходимо зарегистрироваться и войти в аккаунт.<br>
-								- Пользователь имеет доступ к таблице калорийности всех продуктов.<br>
-								- Пользователь может добавлять в дневник информацию о приеме пищи (продукт, прием пищи, кол-во в граммах).<br>
-								- Пользователь может просматривать статистику по КБЖУ и по видам продуктов за определенные дни.
+								<p><h6>Functionality:</h6>
+								- User should create an account to start using application.<br>
+								- User can access food calorie table and dicsover the caloric content for common russian foods.<br>
+								- User can add information on food consumed (type of product, product, amount and meal) to check on calories.<br>
+								- User can get statistics on food consumed and PFC for selected day.
 								</p>
 								<p>
-									<h6>Технологии: </h6>
-									Python3.10 (Flask, sqlite3, pandas, plotly и прочие библиотеки), HTML, CSS, Bootstrap, SQL, Docker.
+									<h6>Technologies: </h6>
+									Python3.10 (Flask, sqlite3, pandas, plotly and other libraries), HTML, CSS, Bootstrap, SQL, Docker.
 								</p>
 							</li>
 
@@ -293,13 +293,13 @@
 								<a href="https://github.com/DianaS96/Spb_cars_sales">
 									<h5>Веб-приложение для предсказания стоимости подержаной машины в СПб по состоянию на середину февраля 2022г.🚗🤑</h5>
 								</a>
-								<p><h6>Функционал:</h6>
-									- Пользователю необходимо ввести параметры машины: марка, тип кузова, год выпуска, мощность двигателя (л.с.), привод, коробка передач, гарантия)<br>
-									- После ввода данных пользователь увидит ориентировочную цену.
+								<p><h6>Functionality:</h6>
+									- User should enter vehicle characteristics: brand, carcase, year of manufacture, engine capacity, transmission, drive unit, end of guarantee.<br>
+									- After entering the data, the user will see the estimated car price.
 								</p>
 								<p>
-									<h6>Технологии: </h6>
-									Python3.10 (Flask, pandas, beautifulsoup, scikit-learn, CatBoost, LightGBM, XGBoost и прочие библиотеки), HTML, CSS, Bootstrap.
+									<h6>Technologies: </h6>
+									Python3.10 (Flask, pandas, beautifulsoup, scikit-learn, CatBoost, LightGBM, XGBoost and other libraries), HTML, CSS, Bootstrap.
 								</p>
 							</li>
 
@@ -307,35 +307,38 @@
 								<a href="https://github.com/DianaS96/Covid-19_visualization">
 									<h5>Веб-приложение для вывода статистики по распространению COVID-19 😷</h5>
 								</a>
-								<p><h6>Функционал:</h6>
-									- Пользователю необходимо выбрать страну (либо мир в целом) для вывода статистики<br>
-									- После ввода данных пользователь увидит статистику<br>
-									Статистика по определенным странам: общее и дневное количество заражений и смертей.<br>
-									Миировая статистика:  общее и дневное количество заражений и смертей, Топ-10 стран по кол-ву заражений и смертей, карта распространения COVID-19.<br>
+								<p><h6>Functionality:</h6>
+									- User shoul select country (or the world option)<br>
+									- After that user will see statistics<br>
+									Data for specified country: Total and daily cases of COVID-19 and deaths.<br>
+									World statistics:  Total and daily cases of COVID-19 and deaths, 
+									Top 10 countries with the highest number of confirmed COVID-19 cases, 
+									Top 10 countries with the highest number of deaths from COVID-19, 
+									Covid-19 spread in the world.<br>
 								</p>
 	
 								<p>
-									<h6>Технологии: </h6>
-									Python3.10 (Flask, pandas, plotly, matplotlib и прочие библиотеки), HTML, CSS, Bootstrap, Docker.
+									<h6>Technologies: </h6>
+									Python3.10 (Flask, pandas, plotly, matplotlib and other libraries), HTML, CSS, Bootstrap, Docker.
 								</p>
 							</li>
 
 							<li>
 								<a href="https://github.com/DianaS96/Phonebook">
-									<h5>Консольное приложение - телефонный справочник ☎️</h5>
+									<h5>Phonebook application ☎️</h5>
 								</a>
-								<p><h6>Функционал:</h6>
-									- Ввод информации о человеке<br>
-									- Печать информации из справочника<br>
-									- Удаление данных из справочника по определенному id<br>
-									- Сортировка данных по фамилии<br>
-									- Сортировка данных по дню рождения (от старшего к младшему)<br>
-									- Сохранение данных в файл<br>
-									- Считывание данных из файла<br>
+								<p><h6>Functionality:</h6>
+									- input information about person<br>
+									- print all info from the phonebook<br>
+									- delete data under specific number (id)<br>
+									- sort data by surname (alphabetically)<br>
+									- sort friends by Birthday (from older to younger)<br>
+									- save data from the phonebook in a file<br>
+									- read data from a given file<br>
 								</p>
 	
 								<p>
-									<h6>Технологии: </h6>
+									<h6>Technologies: </h6>
 									C.
 								</p>
 							</li>
