eng footer changed

--- a/index_en.html
+++ b/index_en.html
@@ -361,6 +361,7 @@
 					  <ul class="list-unstyled">
 						<li><a href="#scrollspyHeading1">About me</a></li>
 						<li><a href="#scrollspyHeading2">CV</a></li>
+						<li><a href="#scrollspyHeading3">Projects</a></li>
 					  </ul>
 				  </div>
 
