changed link to push_swap project

--- a/index_en.html
+++ b/index_en.html
@@ -221,7 +221,7 @@
 								<td style="text-align: center;">✅100/100</td>
 							</tr>
 							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Puch_swap">Push swap</a>🔢</td>
+								<td><a href="https://github.com/DianaS96/School_42/tree/main/Push_swap">Push swap</a>🔢</td>
 								<td>Sorting algoritm that uses 2 stacks and a set of instructions to manipulate both stacks.</td>
 								<td style="text-align: center;">✅84/100</td>
 							</tr>
@@ -275,7 +275,7 @@
 						<ul style="list-style-type:square;">
 							<li>
 								<a href="https://github.com/DianaS96/Health_diet">
-									<h5>Simple calorie and PFC (proteins, fats, carbohydrates) tracking web application.🥩🥗🍔</h5>
+									<h5>Simple calorie and PFC (proteins, fats, carbohydrates) tracking web application 🥩🥗🍔</h5>
 								</a>
 								<p><h6>Functionality:</h6>
 								- User should create an account to start using application.<br>
@@ -291,7 +291,7 @@
 
 							<li>
 								<a href="https://github.com/DianaS96/Spb_cars_sales">
-									<h5>Веб-приложение для предсказания стоимости подержаной машины в СПб по состоянию на середину февраля 2022г.🚗🤑</h5>
+									<h5>Used car price prediction web application* 🚗🤑</h5>
 								</a>
 								<p><h6>Functionality:</h6>
 									- User should enter vehicle characteristics: brand, carcase, year of manufacture, engine capacity, transmission, drive unit, end of guarantee.<br>
@@ -301,11 +301,12 @@
 									<h6>Technologies: </h6>
 									Python3.10 (Flask, pandas, beautifulsoup, scikit-learn, CatBoost, LightGBM, XGBoost and other libraries), HTML, CSS, Bootstrap.
 								</p>
+								<p style="font-style: italic;">* Prediction of estimated car price is made based on sample data for used cars in SPb marcet collected before 24/02/2022.</p>
 							</li>
 
 							<li>
 								<a href="https://github.com/DianaS96/Covid-19_visualization">
-									<h5>Веб-приложение для вывода статистики по распространению COVID-19 😷</h5>
+									<h5>Web application for displaying statistics on the spread of COVID-19 😷</h5>
 								</a>
 								<p><h6>Functionality:</h6>
 									- User shoul select country (or the world option)<br>
