--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 								<td style="text-align: center;">✅100/100</td>
 							</tr>
 							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Puch_swap">Push swap</a>🔢</td>
+								<td><a href="https://github.com/DianaS96/School_42/tree/main/Push_swap">Push swap</a>🔢</td>
 								<td>Сортировка входящих чисел методом <a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%BE%D1%80%D0%B0%D0%B7%D1%80%D1%8F%D0%B4%D0%BD%D0%B0%D1%8F_%D1%81%D0%BE%D1%80%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0#:~:text=%D0%9F%D0%BE%D1%80%D0%B0%D0%B7%D1%80%D1%8F%D0%B4%D0%BD%D0%B0%D1%8F%20%D1%81%D0%BE%D1%80%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0%20(%D0%B0%D0%BD%D0%B3%D0%BB.,%D0%A1%D1%83%D1%89%D0%B5%D1%81%D1%82%D0%B2%D1%83%D1%8E%D1%82%20%D1%81%D1%82%D0%B0%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%B2%D0%B0%D1%80%D0%B8%D0%B0%D0%BD%D1%82%D1%8B.&text=%2C%20%D0%B3%D0%B4%D0%B5%20w%20%E2%80%94%20%D0%BA%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%BE%20%D0%B1%D0%B8%D1%82%2C%20%D1%82%D1%80%D0%B5%D0%B1%D1%83%D0%B5%D0%BC%D1%8B%D1%85%20%D0%B4%D0%BB%D1%8F%20%D1%85%D1%80%D0%B0%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%BA%D0%B0%D0%B6%D0%B4%D0%BE%D0%B3%D0%BE%20%D0%BA%D0%BB%D1%8E%D1%87%D0%B0.">Radix</a>
 									 с помощью 2 стеков и набора инструкций за минимальное число шагов.</td>
 								<td style="text-align: center;">✅84/100</td>
@@ -272,7 +272,7 @@
 						<ul style="list-style-type:square;">
 							<li>
 								<a href="https://github.com/DianaS96/Health_diet">
-									<h5>Веб-приложение для отслеживания КБЖУ (калории, белки, жиры, углеводы).🥩🥗🍔</h5>
+									<h5>Веб-приложение для отслеживания КБЖУ (калории, белки, жиры, углеводы) 🥩🥗🍔</h5>
 								</a>
 								<p><h6>Функционал:</h6>
 								- Для использования приложения необходимо зарегистрироваться и войти в аккаунт.<br>
@@ -288,7 +288,7 @@
 
 							<li>
 								<a href="https://github.com/DianaS96/Spb_cars_sales">
-									<h5>Веб-приложение для предсказания стоимости подержаной машины в СПб по состоянию на середину февраля 2022г.🚗🤑</h5>
+									<h5>Веб-приложение для предсказания стоимости подержаной машины в СПб по состоянию на середину февраля 2022г 🚗🤑</h5>
 								</a>
 								<p><h6>Функционал:</h6>
 									- Пользователю необходимо ввести параметры машины: марка, тип кузова, год выпуска, мощность двигателя (л.с.), привод, коробка передач, гарантия)<br>
